--- a/onlinecv_js/onlinecv_js.html
+++ b/onlinecv_js/onlinecv_js.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Exercise: Using the position property</title>
+<title>Exercise: Create Collapsible Navbar using JavaScript</title>
 <link rel="stylesheet" href="normalize.css" media="screen">
 <link rel="stylesheet" href="resets.css" media="screen">
 <link rel="stylesheet" href="style.css" media="screen">
