--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@ If you wonder how long I'll be faithful
 I'll be happy to tell you again
 I'm gonna love you forever and ever
 Forever and ever, amen
+		Hello mahal! This may seem so cringey to you but... 
+		Just want to say na despite all the circumstances in life,
+		I am certain that you'd be able to get through all the problems you're in right now.
+		I am aware of how fed up you are of the people surrounding you, including me.
+		Just want to let you know that I will always be supporting you.
+		It's okay to take a rest, give yourself some space.
+		I'll be waiting for you 'til the wounds in your heart are healed.
+		I am willing to wait. For now, let me be the friend you'd always ask to play with.
+		My love for you is pure despite our gender similarities. I fully accept who you are just like how you are to me.
+		I am hoping that this isn't the end. Tomorrow's the start of another year. 
+		To be honest, I wanted you to be part of my 2023 regardless of our relationship status. You might not know this but
+		you're in my favorite list on facebook and the only person there HAHAHAHA! You've been my favorite person this year
+		and will always be. I promise not to get fed up hearing all your rants in life. 
+		Please let me bear half of you problems. It would make me much happier and easier for you to bear.
+		Take a distance from what's weighing you down. There nothing that hinders you from showing off your weaknesses.
+		I know how volatile you are, your mood swings in a blink. You are fragile but strong.
+		I'm sure you'd be able to get throught it. After all, life is full of uncertainty, you just got to learn to live with it.
+		I love you so much! And always will.
 They say time takes its toll on a body
 Makes the young girls brown hair turn gray
 But honey, I don't care, I ain't in love with your hair
