--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Forever and ever, amen
 		Just want to let you know that I will always be supporting you.
 		It's okay to take a rest, give yourself some space.
 		I'll be waiting for you 'til the wounds in your heart are healed.
-		I am willing to wait. For now, let me be the friend you'd always ask to play with.
+		I am willing to wait. For now, let me be the friend you can always reach out whenever you want to.
 		My love for you is pure despite our gender similarities. I fully accept who you are just like how you are to me.
 		I am hoping that this isn't the end. Tomorrow's the start of another year. 
 		To be honest, I wanted you to be part of my 2023 regardless of our relationship status. You might not know this but
